--- a/my_project/apps/1-hello-world/index.html
+++ b/my_project/apps/1-hello-world/index.html
@@ -12,5 +12,16 @@
 
     <script src="dist/output.js"></script>
   </head>
-  <body></body>
+  <body>
+    <h1>Heading 1</h1>
+    <h2>Heading 2</h2>
+    <h3>Heading 3</h3>
+    <h4>Heading 4</h4>
+    <h5>Heading 5</h5>
+    <h6>Heading 6</h6>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea magni sapiente officia consequatur porro accusamus eum et doloribus minus eveniet, laboriosam
+      sit earum nihil vitae tenetur, modi, amet voluptates tempore.
+    </p>
+  </body>
 </html>
