implemented usage of helloworld extension

--- a/my_project/apps/1-hello-world/index.html
+++ b/my_project/apps/1-hello-world/index.html
@@ -23,5 +23,6 @@
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea magni sapiente officia consequatur porro accusamus eum et doloribus minus eveniet, laboriosam
       sit earum nihil vitae tenetur, modi, amet voluptates tempore.
     </p>
+    <button id="helloServer" type="button">Hello Server!</button>
   </body>
 </html>
