updated landing page to support status sending functionality

--- a/my_project/apps/1-hello-world/index.html
+++ b/my_project/apps/1-hello-world/index.html
@@ -13,16 +13,15 @@
     <script src="dist/output.js"></script>
   </head>
   <body>
-    <h1>Heading 1</h1>
-    <h2>Heading 2</h2>
-    <h3>Heading 3</h3>
-    <h4>Heading 4</h4>
-    <h5>Heading 5</h5>
-    <h6>Heading 6</h6>
-    <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea magni sapiente officia consequatur porro accusamus eum et doloribus minus eveniet, laboriosam
-      sit earum nihil vitae tenetur, modi, amet voluptates tempore.
-    </p>
+    <h1>🤖 HELLO HUMAN, HOW ARE YOU?</h1>
     <button id="helloServer" type="button">Hello Server!</button>
+    <button id="sendStatus" type="button">Send Status</button>
+    <input type="radio" id="sad" name="happyness-status" value="sad" />
+    <label for="sad">😔</label><br />
+    <input type="radio" id="indifferent" name="happyness-status" value="indifferent" />
+    <label for="indifferent">😐</label><br />
+    <input type="radio" id="happy" name="happyness-status" value="happy" />
+    <label for="indifferent">😊</label><br />
+    <p>DISCLAIMER: (ROBOT DOES NOT CARE FOR HUMAN FEELINGS OR EMOTIONS)</p>
   </body>
 </html>
