--- a/my_project/apps/1-hello-world/index.html
+++ b/my_project/apps/1-hello-world/index.html
@@ -12,17 +12,5 @@
 
     <script src="dist/output.js"></script>
   </head>
-  <body>
-    <!--
-      <h1>🤖</h1>
-      <button id="helloServer" type="button">Hello Server!</button>
-      <button id="sendStatus" type="button">Send Status</button>
-      <input type="radio" id="sad" name="happyness-status" value="sad" />
-      <label for="sad">😔</label><br />
-      <input type="radio" id="indifferent" name="happyness-status" value="indifferent" />
-      <label for="indifferent">😐</label><br />
-      <input type="radio" id="happy" name="happyness-status" value="happy" />
-      <label for="indifferent">😊</label><br />
-    -->
-  </body>
+  <body></body>
 </html>
