--- a/my_project/apps/1-hello-world/index.html
+++ b/my_project/apps/1-hello-world/index.html
@@ -11,6 +11,7 @@
     <script src="/hub/wetouch.js"></script>
 
     <script src="dist/output.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.5.1/dist/confetti.browser.min.js"></script>
   </head>
   <body></body>
 </html>
