--- a/my_project/apps/4-quiz/index.html
+++ b/my_project/apps/4-quiz/index.html
@@ -11,7 +11,8 @@
     <script src="/hub/wetouch.js"></script>
 
     <script src="dist/output.js"></script>
-
+    <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.5.1/dist/confetti.browser.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/gsap.min.js"></script>
   </head>
   <body></body>
 </html>
