--- a/my_project/apps/2-p5/index.html
+++ b/my_project/apps/2-p5/index.html
@@ -12,6 +12,12 @@
 
     <script src="dist/output.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.6.0/p5.min.js" integrity="sha512-3RlxD1bW34eFKPwj9gUXEWtdSMC59QqIqHnD8O/NoTwSJhgxRizdcFVQhUMFyTp5RwLTDL0Lbcqtl8b7bFAzog==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    
+    <script src="./js/physics.js"></script>
+    <script src="./js/transform2d.js"></script>
+    <script src="./js/rigidbody2d.js"></script>
+    <script src="./js/gameObject.js"></script>
+    <script src="./js/bird.js"></script>
     <script src="./js/sketch.js"></script>
 </head>
     <body>    
