--- a/my_project/apps/7-matter-with-matter-as-render-engine/index.html
+++ b/my_project/apps/7-matter-with-matter-as-render-engine/index.html
@@ -16,6 +16,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/matter-js/0.19.0/matter.min.js" integrity="sha512-0z8URjGET6GWnS1xcgiLBZBzoaS8BNlKayfZyQNKz4IRp+s7CKXx0yz7Eco2+TcwoeMBa5KMwmTX7Kus7Fa5Uw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 </head>
     <body>    
+            <script src="./js/box.js"></script>
             <script src="./js/sketch.js"></script>
     </body>
 </html>
